# learn_esp8266

./: README.md
hello_world/: cmakeNote.txt  sdkconfig
hello_world/main/: CMakeLists.txt  hello_world_main.c
multi_menu/: .gitignore  CMakeLists.txt  Makefile  makelog.txt  sdkconfig  sdkconfig.old
multi_menu/main/: CMakeLists.txt  app_main.c  component.mk
multi_menu/main/menu/: menu.c  menu.h
