idf_component_register(SRCS "app_main.c"
                            "./csrc/u8g2_bitmap.c" 
                            "./csrc/u8g2_d_setup.c"
                            "./csrc/u8g2_setup.c"
                            "./csrc/u8g2_hvline.c"
                            "./csrc/u8g2_ll_hvline.c"
                            "./csrc/u8g2_buffer.c"
                            "./csrc/u8g2_box.c"
                            "./csrc/u8g2_font.c"
                            "./csrc/u8g2_line.c"
                            "./csrc/u8x8_8x8.c"
                            "./csrc/u8x8_display.c"
                            "./csrc/u8x8_d_ssd1606_172x72.c"
                            "./csrc/u8g2_intersection.c"
                            "./csrc/u8x8_u8toa.c"
                            "./csrc/u8x8_u16toa.c"
                            "./csrc/u8x8_setup.c"
                            "./csrc/u8g2_d_memory.c"
                            "./csrc/u8g2_fonts.c"
                            "./csrc/u8x8_cad.c"
                            "./csrc/u8x8_d_ssd1306_128x64_noname.c"
                            "./csrc/u8x8_gpio.c"
                            "./csrc/u8x8_byte.c"
                            "./csrc/u8g2_circle.c"
                            "./csrc/u8g2_polygon.c"
                            "./menu/menu.c"
                    INCLUDE_DIRS "" "./csrc" "./menu")